<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PetFinder</string>
    <string name="start_txtSignUp">Sign Up</string>
    <string name="start_hintUsername">Username</string>
    <string name="start_hintPassword">Password</string>
    <string name="start_errSignIn">Invalid input</string>
    <string name="start_errFromServer">Invalid username or password</string>
    <string name="start_btnSignIn">Sign In</string>
    <string name="sign_up_hintUsername">Username</string>
    <string name="sign_up_hintPassword">Password</string>
    <string name="sign_up_hintPhoneNumber">Phone Number</string>
    <string name="sign_up_btnSignUp">Sign Up</string>
    <string name="sign_up_errSignIn">Invalid input</string>
    <string name="sign_up_errFromServer">Username already in use!</string>
    <string name="main_txtCreate">Create Post</string>
    <string name="main_txtMyPosts">My Posts</string>
    <string name="post_description">%1$s, %2$s size and color: %3$s</string>
    <string name="specie_dog">dog</string>
    <string name="specie_cat">cat</string>
    <string name="specie_other">Other</string>
    <string name="size_small">small</string>
    <string name="size_medium">medium</string>
    <string name="size_large">large</string>
    <string name="color_black">black</string>
    <string name="color_white">white</string>
    <string name="color_brown">brown</string>
    <string name="color_grey">grey</string>
    <string name="color_yellow">yellow</string>
    <string name="create_post_txtPostType">I\'ve .. an animal:</string>
    <string name="create_post_rbFound">Found</string>
    <string name="create_post_rbLost">Lost</string>
    <string name="create_post_txtSpecie">It\'s a ..</string>
    <string name="create_post_txtSize">Size</string>
    <string name="create_post_rbDog">Dog</string>
    <string name="create_post_rbCat">Cat</string>
    <string name="create_post_rbSmallSize">Small</string>
    <string name="create_post_rbMediumSize">Medium</string>
    <string name="create_post_rbLargeSize">Large</string>
    <string name="create_post_txtColor">Color</string>
    <string name="create_post_cbColorWhite">White</string>
    <string name="create_post_cbColorBlack">Black</string>
    <string name="create_post_cbColorBrown">Brown</string>
    <string name="create_post_cbColorGrey">Grey</string>
    <string name="create_post_cbColorYellow">Yellow</string>
    <string name="create_post_btnPhoto">Take a Photo</string>
    <string name="create_post_descriptionPhoto">Animal Photo</string>
    <string name="create_post_txtLocation">[Location]</string>
    <string name="create_post_btnLocation">Set Location</string>
    <string name="create_post_btnMatchPost">Find Similar Posts</string>
    <string name="create_post_btnCreatePost">Create Post</string>
    <string name="create_post_errNoLocation">No location defined!</string>
    <string name="create_post_errNoPhoto">Photo wasn\'t taken!</string>
    <string name="create_post_errSavingPhoto">An error occurred while saving the image</string>
    <string name="create_post_errMissingRequiredFields">Missing required fields</string>
    <string name="create_post_errCreatingPost">Something went wrong.. try again!</string>
    <string name="create_post_successCreatingPost">Created!</string>
    <string name="create_post_take_photo">Take a photo</string>
    <string name="create_post_pick_photo">Pick a photo</string>
    <string name="select_post_location_btnPinLocation">Pin</string>
    <string name="my_posts_load_error">An error occurred while loading the post list</string>
    <string name="matching_post_details_menu_contact">Send a SMS</string>
    <string name="matching_post_details_menu_foundMsg">You\'ve found my pet! Call me when you can!</string>
    <string name="matching_post_details_menu_lostMsg">I\'ve found your pet! Call me back!</string>
    <string name="matching_post_details_menu_successMsg">SMS Sent!</string>
    <string name="matching_post_details_menu_errMsg">Error sending the SMS</string>
    <string name="my_post_menu_delete">Delete</string>
    <string name="my_post_delete_confirmation">Are you sure you want do delete this post?</string>
    <string name="my_post_delete_confirmation_yes">Yes</string>
    <string name="my_post_delete_confirmation_no">No</string>
    <string name="my_post_delete_success">The post was deleted successfully</string>
    <string name="my_post_delete_failure">The post could not be deleted</string>
</resources>
